[package]
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
description = "Generate Dilbert Atom feed with images."
license = "MIT"
name = "dilbert-feed"
publish = false
repository = "https://bitbucket.org/Soft/dilbert-feed"
version = "0.1.1"

[dependencies]
atom_syndication = "0.5.7"
failure = "0.1.1"
futures = "0.1.18"
htmlescape = "0.3.1"
hyper = "0.11.16"
select = "0.4.2"
structopt = "0.1.7"
structopt-derive = "0.1.6"
tokio-core = "0.1.12"

[profile.release]
panic = "abort"
lto = true