[package]
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
description = "Generate Dilbert Atom feed with images."
license = "MIT"
name = "dilbert-feed"
publish = false
repository = "https://bitbucket.org/Soft/dilbert-feed"
version = "0.1.1"

[dependencies]
atom_syndication = "0.6.0"
failure = "0.1.2"
futures = "0.1.23"
htmlescape = "0.3.1"
hyper = "0.12.8"
select = "0.4.2"
structopt = "0.2.10"
structopt-derive = "0.2.10"
tokio = "0.1.8"

[profile.release]
panic = "abort"
lto = true
