[package]
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
description = "Generate Dilbert Atom feed with images."
license = "MIT"
name = "dilbert-feed"
publish = false
repository = "https://github.com/Soft/dilbert-feed"
version = "0.3.0"
edition = "2018"

[dependencies]
anyhow = { version = "1" }
atom_syndication = { version = "0.9" }
base64 = { version = "0.13" }
htmlescape = { version = "0.3" }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-native-roots"] }
select = { version = "0.5" }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["net", "rt-multi-thread"] }
futures = { version = "0.3" }
tree_magic = { version = "0.2", default_features = false }

[profile.release]
panic = "abort"
lto = true
